
import "CoordinateProto.proto";

package proto;

option java_package = "com.lvl6.aoc2.noneventprotos";
option java_outer_classname = "UserStruct";

message UserStructProto {
	optional int32 userID = 1;
	optional int32 structID = 2;
	optional int32 structLevel = 3;
	optional CoordinateProto position = 4;
	optional int32 contents = 5;
	optional int64 lastCollectTime = 6;
	optional int64 purchaseTime = 7;
	optional int64 lastUpgradeTime = 8;
	optional int64 startUpgradeTime = 9;
	optional bool isUpgrading = 10;
}