//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "BoosterPackStuff.proto";
import "City.proto";
import "MonsterStuff.proto";
import "QuestStuff.proto";
import "Structure.proto";
import "Task.proto";
import "User.proto";

package proto;

option java_package = "com.lvl6.mobsters.noneventprotos";
option java_outer_classname = "StaticDataStuffProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


message StaticDataProto {
    optional MinimumUserProto sender = 1;
	repeated CityExpansionCostProto expansionCosts = 2;
	repeated FullCityProto allCities = 3;
	repeated StructureInfoProto allStructs = 4;
	repeated FullTaskProto allTasks = 5;
	repeated MonsterProto allMonsters = 6;
	repeated StaticUserLevelInfoProto slip = 7;
	
	repeated QuestProto inProgressQuests = 8; //has not been completed
    repeated QuestProto unredeemedQuests = 9; //is complete
	repeated QuestProto availableQuests = 10; 
	
	//optional RetrieveStaticDataStatus status = 11; //defined near the end
	repeated BoosterPackProto boosterPacks = 12;
	
	
	optional RetrieveStaticDataStatus status = 11;
	
	enum RetrieveStaticDataStatus {
		SUCCESS = 1;
		SOME_FAIL = 2;
	}
	
}
	